--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.port=8081
 spring.datasource.url=jdbc:h2:~/mydb
 spring.datasource.username=sa
 spring.datasource.password=
+logging.level.org.springframework.security=DEBUG
+
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
