--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
+# Název aplikace a port
 spring.application.name=pro2_e
 server.port=8081
 
-# AltGr + 1 = ~
-
-spring.datasource.url=jdbc:h2:~/mydb
+spring.datasource.url=jdbc:h2:file:./data/volunteerdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-logging.level.org.springframework.security=DEBUG
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# H2 konzole povolena pro lad?ní
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-spring.jpa.hibernate.ddl-auto=create-drop
-
+# Hibernate: uchová strukturu i data, ne destroy & recreate
+spring.jpa.hibernate.ddl-auto=update
